# cs-architecture-ticket-system

./: CMakeLists.txt  README.md  客票系统.xmind
data/: 数据.csv
include/: Person.h  admin.h
notes/: 关于C++链接并操作数据库.md  关于Sonic-Cpp的json库的使用.md
sonic-cpp/: BUILD.bazel  CONTRIBUTING.md  Doxyfile  WORKSPACE
sonic-cpp/docs/: usage.md
sonic-cpp/include/sonic/dom/: generic_document.h  genericnode.h
sonic-cpp/include/sonic/experiment/: lazy_update.h
sonic-cpp/include/sonic/internal/: parse_number_normal_fast.h
sonic-cpp/licenses/: LICENSE-yyjson
sonic-cpp/scripts/: unittest.sh
sonic-cpp/testdata/: github_events.json  gsoc-2018.json  twitter.json  twitterescaped.json
src/: Name.cpp  Name.h  Person.cpp  admin.cpp  ticket.cpp  ticket.h  train.cpp  train.h
test/: a.out
test/muduo网络模块/: CMakeLists.txt
test/muduo网络模块/src/: 1.cpp
数据库设计/: 1.xlsx  shujuk.sql  数据库设计.xlsx  用户表.csv  设计思路.md
测试区/: 1.cpp  json模版
测试区/example/: addmember  addmember.cpp  get_and_set
测试区/include/sonic/: writebuffer.h
测试区/include/sonic/dom/: dynamicnode.h  serialize.h
测试区/include/sonic/internal/: stack.h
测试区/myceshi/: 1  1.cpp  mysql.cpp
